* Display ids and rule names on access error
* Move field definition from Model to Field
* Use number of verbose flag as log level
* Add coroutine concurrency option
* Add increasing delay on database operational error retry
* Allows to lock records for update
* Remove _nocache on Transaction
* Make Cache transactional
* Allow to search on key's value of Dict
* Allow to order Dict by key's value
* Do not store keys with null value in Dict
* Add cache timeout for web
* Allow the bus requests to be redirected to another host
* Add support for CORS
* Add extras modules to ModuleTestCase
* Add timeout to Report.convert
* Allow records from XML with noupdate to be deleted
* Add ir.calendar for month and day
* Rename languages: hu_HU, it_IT and pt_BR into hu, it and pt
* Define custom exceptions
* Remove _error_messages, raise_user_error and raise_user_warning
* Remove ModelStorage._constraints
* Add ir.message
* Add check on ModelSQL for positive id
* New API to read related fields
* Remove implicit fields names in ModelStorage.read
* Check read access on field in search domain (issue7766)
* Add active field on ModelAccess, ModelFieldAccess and Group
* Use write mode by default to check create and delete of resources

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Allow non translatable reports
* Replace hard coded 'state' by '_transition_state' in copy
* Support dotted notation in copy default
* Allow callable in copy default
* Add bus system
* Allow to set any default configuration value from environment
* Clear existing session when password is changed
* Manage session with max_age and timeout
* Use passlib to hash and update password
* Remove unique constraint on attachment name
* New icons
* Add pyson TimeDelta
* Remove button if it is not allowed to access some of its dependant fields
* Add support for Python 3.7
* Add transactional queue and workers
* Add __table_handler__ to ModelSQL
* Support partial index